# hooReads

./: .gitignore  LICENSE  README.md
backend/: .env.example  .gitignore  chapter1.txt  main.py  pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/models/: schemas.py
backend/app/routes/: __init__.py  extract_moments.py  generate_scene.py  generations.py  narrate.py  parse.py  scene_status.py
backend/app/services/: generation_store.py  llm.py  pdf.py  pipeline.py  tts.py
backend/app/world_model/: __init__.py  adapter.py  worldgen_adapter.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/scenes/[genId]/[momentIndex]/: page.tsx
frontend/components/: theme-provider.tsx
frontend/components/home/: dashboard-bg.tsx  dashboard-content.tsx  generation-card.tsx  loading-screen.tsx  scenery-bg.tsx  step-illustrations.tsx  upload-panel.tsx
frontend/components/viewer/: audio-player.tsx  scene-bg.tsx  scene-page-content.tsx  scene-viewer.tsx
frontend/types/: gaussian-splats-3d.d.ts
prompts/: environment_summary.txt
