[project]
name = "backend"
version = "0.1.0"
description = "hooReads backend - PDF parsing, LLM extraction, 3D scene generation, TTS narration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",
    "openai>=1.82.0",
    "elevenlabs>=1.50.0",
    "pdfplumber>=0.11.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.9.0",
    "python-dotenv>=1.1.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.22.1",
]
